<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateItemActivity"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/case_update_type_selection_text_view"
        app:layout_constraintStart_toStartOf="@+id/case_update_type_selection_text_view"
        app:layout_constraintTop_toBottomOf="@+id/case_update_type_selection_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_six_m_king_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/six_m_king_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_soft_six_m_king_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/soft_six_m_king_item_type"
                android:textSize="@dimen/item_type_text_size" />


            <TextView
                android:id="@+id/update_twelve_m_king_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/twelve_m_king_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_soft_twelve_m_king_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/soft_twelve_m_king_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_twelve_m_hundred_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/twelve_m_hundred_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_soft_twelve_m_hundred_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/soft_twelve_m_hundred_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_six_m_hundred_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/six_mhundred_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_soft_six_m_hundred_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/soft_six_mhundred_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_one_twenty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/one_twenty_item_type"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_six_point_four_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/six_point_four"
                android:textSize="@dimen/item_type_text_size" />

            <TextView
                android:id="@+id/update_other_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_type_bottom_margin"
                android:background="@color/colorLight"
                android:onClick="ItemTypeClicked"
                android:padding="@dimen/default_view_padding"
                android:text="@string/other_item_type"
                android:textSize="@dimen/item_type_text_size" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/case_update_type_selection_text_view"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/default_text_view_size"
        app:layout_constraintEnd_toEndOf="@+id/update_item_edit_text_box"
        app:layout_constraintStart_toStartOf="@+id/update_item_edit_text_box"
        app:layout_constraintTop_toBottomOf="@+id/update_item_edit_text_box"
        tools:text="6M King" />

    <EditText
        android:id="@+id/update_item_edit_text_box"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/background_light"
        android:hint="@string/edit_text_hint_string"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="@dimen/default_text_view_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="ItemTypeClicked"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/scrollView4"
        app:layout_constraintStart_toStartOf="@+id/scrollView4"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

</androidx.constraintlayout.widget.ConstraintLayout>